--- a/index.html
+++ b/index.html
@@ -43,4 +43,11 @@
     <script src="https://cdn.socket.io/4.4.0/socket.io.min.js" integrity="sha384-1fOn6VtTq3PWwfsOrk45LnYcGosJwzMHv+Xh/Jx5303FVOXzEnw0EpLv30mtjmlj" crossorigin="anonymous"></script>
     <script src="sketch.js"></script>
   </body>
+  <div class="chatContainer">
+    <div class="messages"></div>
+    <div class="messageContainer">
+      <input type="text" value="Anonymous" id="name">
+      <input type="text" placeholder="Enter message here" id="message">
+    </div>
+  </div>
 </html>
